; ModuleID = '/home/carl/AnghaBench/mpv/input/extr_ipc-win.c_pipe_error_is_fatal.c'
source_filename = "/home/carl/AnghaBench/mpv/input/extr_ipc-win.c_pipe_error_is_fatal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @pipe_error_is_fatal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pipe_error_is_fatal(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %6 [
    i32 0, label %5
    i32 130, label %5
    i32 131, label %5
    i32 128, label %5
    i32 129, label %5
  ]

5:                                                ; preds = %1, %1, %1, %1, %1
  store i32 0, i32* %2, align 4
  br label %7

6:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %7

7:                                                ; preds = %6, %5
  %8 = load i32, i32* %2, align 4
  ret i32 %8
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
